<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeScreen"
    android:background="@drawable/background_main">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constrainedHeight="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            android:background="@color/black">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_centerInParent="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/Gigle_Heading_Theme"
                    android:text="Gigle"
                    android:textAllCaps="true"/>
                <ImageButton
                    android:hapticFeedbackEnabled="true"
                    android:theme="@style/Gigle_Btn_Theme"
                    android:id="@+id/btn_Back"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_centerVertical="true"
                    android:background="@drawable/baseline_arrow_back_24"/>
            </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginHorizontal="5dp">
            <ImageView
                android:id="@+id/event_image"
                android:layout_marginHorizontal="5dp"
                android:layout_width="match_parent"
                android:layout_height="290dp"
                android:layout_above="@id/event_heading"
                tools:srcCompat="@tools:sample/backgrounds/scenic" />
            <!--Event Infomation-->
            <TextView
                android:id="@+id/event_heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:layout_above="@id/event_info"
                android:text="Event Info"
                android:background="@drawable/gigle_textbox_rounded_top"
                android:theme="@style/Gigle_Body_Heading_Theme" />
            <TextView
                android:id="@+id/event_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@id/venue_info_heading"
                android:text="Event info goes here..."
                android:background="@drawable/gigle_textbox_rounder_bottom"
                android:theme="@style/Gigle_Body_Theme" />
            <!-- -->
            <!--Venue Information-->
            <TextView
                android:id="@+id/venue_info_heading"
                android:layout_marginTop="15dp"
                android:background="@drawable/gigle_textbox_rounded_top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@id/venue_name"
                android:text="Venue Infomnation"
                android:theme="@style/Gigle_Body_Heading_Theme" />

            <TextView
                android:id="@+id/venue_name"
                android:layout_width="match_parent"
                android:background="@drawable/gigle_textbox_rounded_middle"
                android:layout_height="wrap_content"
              android:layout_above="@id/venue_website"
                android:text="Venue Name"
                android:theme="@style/Gigle_Body_Theme" />
            <TextView
                android:id="@+id/venue_website"
                android:layout_width="match_parent"
                android:background="@drawable/gigle_textbox_rounded_middle"
                android:layout_height="wrap_content"
                android:layout_above="@id/venue_email"
                android:text="Venue Website"
                android:theme="@style/Gigle_Body_Theme" />
            <TextView
                android:id="@+id/venue_email"
                android:layout_width="match_parent"
                android:background="@drawable/gigle_textbox_rounded_middle"
                android:layout_height="wrap_content"
                android:layout_above="@id/venue_phonenumber"
                android:text="Venue Email"
                android:theme="@style/Gigle_Body_Theme" />
            <TextView
                android:id="@+id/venue_phonenumber"
                android:layout_width="match_parent"
                android:background="@drawable/gigle_textbox_rounder_bottom"
                android:layout_height="wrap_content"
                android:layout_above="@id/set_list_btn"
                android:text="Venue Phone Number"
                android:theme="@style/Gigle_Body_Theme" />
            <!-- -->
            <Button
                android:id="@+id/set_list_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@id/reviews_btn"
                android:text="Set List"
                android:theme="@style/Gigle_Btn_Theme"
                app:cornerRadius="5dp" />
            <Button
                android:id="@+id/reviews_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:text="Reviews"
                android:theme="@style/Gigle_Btn_Theme"
                app:cornerRadius="5dp" />
        </RelativeLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>