<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/background_main">
    <RelativeLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="60dp"
        android:paddingHorizontal="10dp"
        android:paddingBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text="GIGLE"
            android:theme="@style/Gigle_Heading_Big_Theme"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_SignIn"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="Sign In"
            android:textSize="48dp"
            app:cornerRadius="5dp"
            android:theme="@style/Gigle_Btn_Theme"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>