...
            <Button
                android:id="@+id/reviews_btn"
                android:layout_gravity="bottom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:text="Create Reviews"
                android:theme="@style/Gigle_Btn_Theme"
                app:cornerRadius="5dp"/>
        </RelativeLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
