package com.example.cse3masassignment;


import android.util.Log;
import android.view.View;
import android.view.ViewGroup;
import android.view.ViewParent;

import androidx.test.espresso.ViewInteraction;
import androidx.test.ext.junit.rules.ActivityScenarioRule;
import androidx.test.ext.junit.runners.AndroidJUnit4;
import androidx.test.filters.LargeTest;
import androidx.test.rule.GrantPermissionRule;

import org.hamcrest.Description;
import org.hamcrest.Matcher;
import org.hamcrest.TypeSafeMatcher;
import org.junit.Rule;
import org.junit.Test;
import org.junit.runner.RunWith;

import static androidx.test.espresso.Espresso.onView;
import static androidx.test.espresso.action.ViewActions.click;
import static androidx.test.espresso.action.ViewActions.scrollTo;
import static androidx.test.espresso.matcher.ViewMatchers.isDisplayed;
import static androidx.test.espresso.matcher.ViewMatchers.withClassName;
import static androidx.test.espresso.matcher.ViewMatchers.withId;
import static androidx.test.espresso.matcher.ViewMatchers.withText;
import static org.hamcrest.Matchers.allOf;
import static org.hamcrest.Matchers.is;

@LargeTest
@RunWith(AndroidJUnit4.class)
public class FullAppTest {

    @Rule
    public ActivityScenarioRule<MainActivity> mActivityScenarioRule =
            new ActivityScenarioRule<>(MainActivity.class);

    @Rule
    public GrantPermissionRule mGrantPermissionRule =
            GrantPermissionRule.grant(
                    "android.permission.ACCESS_FINE_LOCATION");

    @Test
    public void fullAppTest() throws InterruptedException {
        try {
        ViewInteraction materialButton2 = onView(
                allOf(withId(R.id.btn_SignIn), withText("Sign In"),
                        childAtPosition(
                                allOf(withId(R.id.layout),
                                        childAtPosition(
                                                withId(R.id.main),
                                                0)),
                                1),
                        isDisplayed()));
        materialButton2.perform(click());
        }catch(Exception e){
            Log.e("EXCEPTION", "fullAppTest: ",e );
        }
        Thread.sleep(9000);
        try {
            ViewInteraction materialButton3 = onView(
                    allOf(withId(android.R.id.button1), withText("OK"),
                            childAtPosition(
                                    childAtPosition(
                                            withId(androidx.appcompat.R.id.buttonPanel),
                                            0),
                                    3)));
            materialButton3.perform(scrollTo(), click());
        }catch (Exception e){

        }


        try {
            ViewInteraction materialButton4 = onView(
                    allOf(withId(R.id.reviews_btn), withText("Reviews"),
                            childAtPosition(
                                    childAtPosition(
                                            withClassName(is("android.widget.LinearLayout")),
                                            1),
                                    9),
                            isDisplayed()));
            materialButton4.perform(click());

            ViewInteraction materialButton5 = onView(
                    allOf(withId(R.id.reviews_btn), withText("Create Reviews"),
                            childAtPosition(
                                    childAtPosition(
                                            withClassName(is("android.widget.LinearLayout")),
                                            2),
                                    1),
                            isDisplayed()));
            materialButton5.perform(click());

            ViewInteraction appCompatImageButton = onView(
                    allOf(withId(R.id.btn_Back),
                            childAtPosition(
                                    childAtPosition(
                                            withId(R.id.toolbar),
                                            0),
                                    1),
                            isDisplayed()));
            appCompatImageButton.perform(click());

            ViewInteraction appCompatImageButton2 = onView(
                    allOf(withId(R.id.btn_Back),
                            childAtPosition(
                                    childAtPosition(
                                            withId(R.id.toolbar),
                                            0),
                                    1),
                            isDisplayed()));
            appCompatImageButton2.perform(click());

            ViewInteraction materialButton6 = onView(
                    allOf(withId(R.id.set_list_btn), withText("Set List"),
                            childAtPosition(
                                    childAtPosition(
                                            withClassName(is("android.widget.LinearLayout")),
                                            1),
                                    8),
                            isDisplayed()));
            materialButton6.perform(click());

            ViewInteraction appCompatImageButton3 = onView(
                    allOf(withId(R.id.btn_Back),
                            childAtPosition(
                                    childAtPosition(
                                            withId(R.id.toolbar),
                                            0),
                                    1),
                            isDisplayed()));
            appCompatImageButton3.perform(click());

            ViewInteraction appCompatImageButton4 = onView(
                    allOf(withId(R.id.btn_Back),
                            childAtPosition(
                                    childAtPosition(
                                            withId(R.id.toolbar),
                                            0),
                                    1),
                            isDisplayed()));
            appCompatImageButton4.perform(click());

            ViewInteraction appCompatImageButton5 = onView(
                    allOf(withId(R.id.btn_Back),
                            childAtPosition(
                                    childAtPosition(
                                            withId(R.id.toolbar),
                                            0),
                                    1),
                            isDisplayed()));
            appCompatImageButton5.perform(click());

            ViewInteraction materialButton7 = onView(
                    allOf(withId(android.R.id.button1), withText("OK"),
                            childAtPosition(
                                    childAtPosition(
                                            withId(androidx.appcompat.R.id.buttonPanel),
                                            0),
                                    3)));
            materialButton7.perform(scrollTo(), click());
        } catch (Exception e) {
        }
    }

    private static Matcher<View> childAtPosition(
            final Matcher<View> parentMatcher, final int position) {

        return new TypeSafeMatcher<View>() {
            @Override
            public void describeTo(Description description) {
                description.appendText("Child at position " + position + " in parent ");
                parentMatcher.describeTo(description);
            }

            @Override
            public boolean matchesSafely(View view) {
                ViewParent parent = view.getParent();
                return parent instanceof ViewGroup && parentMatcher.matches(parent)
                        && view.equals(((ViewGroup) parent).getChildAt(position));
            }
        };
    }
}
